--- a/output/theme/css/styles.css
+++ b/output/theme/css/styles.css
@@ -9,7 +9,7 @@ body {
     line-height: 1.4em;
     width: 80%;
     margin: 0 auto;
-    font-family: 'Helvatica Neue', "Microsoft YaHei", "PingFang SC", sans-serif;
+    font-family: 'Helvatica Neue', "PingFang SC", "Microsoft YaHei", sans-serif;
 }
 
 .site {
